--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -4,7 +4,8 @@
     <table class="table">
         <thead>
         <tr>
-            <th>Identifiant</th>
+            <th>Nom</th>
+            <th>Prenom</th>
             <th>Mail</th>
             <th>Actif</th>
         </tr>
@@ -12,8 +13,9 @@
         <tbody>
         {% for user in users %}
             <tr class="user-row" data-id="{{ user.id }}">
+                <td>{{ user.Nom }}</td>
+                <td>{{ user.Prenom }}</td>
                 <td>{{ user.username }}</td>
-                <td>{{ user.email }}</td>
                 <td>{{ user.enabled }}</td>
             </tr>
         {% endfor %}
