--- a/web/css/style.css
+++ b/web/css/style.css
@@ -167,16 +167,22 @@ html, body {
 
 .titre_page {
 	font-size: 1.5em;
+	margin-bottom: 1em;
 	text-transform: uppercase;
 	color: #222222;
 	border-bottom: 3px dotted #555555;
 }
 
 .titre_form_element {
-	background-color: #3285ab;
 	margin: 0.714em 0 0.714em 0;
 	text-transform: uppercase;
 	color: #ffffff;
+	width: 100%;
+	height: 1.8em;
+	line-height: 1.8em;
+	vertical-align: middle;
+	background-color: rgb(50, 133, 171);
+	padding-left: 0.214em;
 }
 
 #documentcontent {
@@ -296,3 +302,7 @@ html, body {
 }
 
 /*-------------------------     FIN TABLEAU =>   DÉBUT BLABLA     -------------------------*/
+
+.fos_user_profile_edit .required {
+	color: red;
+}
