--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -21,7 +21,7 @@
             </form>
         {% endif %}
 
-        {% if classeur.isRetractable(app.user.id) %}
+        {% if retractable %}
             <form class="form_action" action="{{ path("classeur_retracter") }}" method="post">
                 <button type="submit" class="btn btn-retracter">Se r&eacute;tracter</button>
                 <input type="hidden" value="{{ classeur.id }}" name="id"/>
